--- a/sistemaCompras/trunk/Gestores/Gestores.csproj
+++ b/sistemaCompras/trunk/Gestores/Gestores.csproj
@@ -40,8 +40,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="Gestores.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Beans\Beans.csproj">
+      <Project>{EFFA7D2B-0C8D-4227-8946-3FD51B4B6A06}</Project>
+      <Name>Beans</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
