--- a/trunk/sistemaCompras/trunk/sistemaCompras/Ventanas.csproj
+++ b/trunk/sistemaCompras/trunk/sistemaCompras/Ventanas.csproj
@@ -46,6 +46,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AgregarProyecto.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AgregarProyecto.Designer.cs">
+      <DependentUpon>AgregarProyecto.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -60,6 +66,9 @@
     <Compile Include="VentanaPrincipal.Designer.cs">
       <DependentUpon>VentanaPrincipal.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="AgregarProyecto.resx">
+      <DependentUpon>AgregarProyecto.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
