--- a/trunk/sistemaCompras/trunk/sistemaCompras/Ventanas.csproj
+++ b/trunk/sistemaCompras/trunk/sistemaCompras/Ventanas.csproj
@@ -60,6 +60,12 @@
     </Compile>
     <Compile Include="Main.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RegistrarUsuarioDlg.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="RegistrarUsuarioDlg.Designer.cs">
+      <DependentUpon>RegistrarUsuarioDlg.cs</DependentUpon>
+    </Compile>
     <Compile Include="UsuarioDlg.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -102,6 +108,16 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Beans\Beans.csproj">
+      <Project>{EFFA7D2B-0C8D-4227-8946-3FD51B4B6A06}</Project>
+      <Name>Beans</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Gestores\Gestores.csproj">
+      <Project>{A23E719E-6310-40D6-AF9A-F1BE3781C67A}</Project>
+      <Name>Gestores</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
