--- a/sistemaCompras/trunk/sistemaCompras/Ventanas.csproj
+++ b/sistemaCompras/trunk/sistemaCompras/Ventanas.csproj
@@ -70,9 +70,7 @@
     <Compile Include="IniciarSesion.Designer.cs">
       <DependentUpon>IniciarSesion.cs</DependentUpon>
     </Compile>
-    <Compile Include="ModificarProducto.cs">
-      <SubType>Form</SubType>
-    </Compile>
+    <Compile Include="ModificarProducto.cs" />
     <Compile Include="ModificarProveedor.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -89,6 +87,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RegistrarProducto.cs">
       <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="RegistrarProducto.Designer.cs">
+      <DependentUpon>RegistrarProducto.cs</DependentUpon>
     </Compile>
     <Compile Include="RegistrarProveedor.cs">
       <SubType>Form</SubType>
